<resources>
    <string name="application_client_id" translatable="false">8f8927148244148aec37</string>
    <string name="application_client_secret" translatable="false">f1a07eb8b20e6769fa817918b6cb8da7860300e1</string>
    <string name="application_redirect_uri" translatable="false">login://com.hbvhuwe.explorergithub</string>

    <string name="app_name">Explorer GitHub</string>
    <string name="user_fragment_header">User</string>
    <string name="repos_fragment_header">Repositories</string>
    <string name="search_github_text">Search GitHub…</string>
    <string name="search_button_text">Search</string>
    <string name="search_fragment_header">Search GitHub</string>
    <string name="item_user">User</string>
    <string name="item_repos">Repos</string>
    <string name="item_search">Search</string>
    <string name="repo_activity_label">Repository</string>
    <string name="file_activity_label">File</string>

    <string name="tab_user_text">Overview</string>
    <string name="tab_repos_text">Repositories</string>
    <string name="tab_search_text">Search</string>
    <string name="tab_starred_text">Stars</string>
    <string name="tab_followers_text">Followers</string>
    <string name="tab_following_text">Following</string>

    <string name="user_email_text">Send Email</string>
    <string name="user_email_text_empty">No Email</string>
    <string name="user_repos">Repos: %1$d</string>

    <string name="activity_login_title">Sign in using GitHub</string>
    <string name="activity_login_logged">Successful sing in</string>
    <string name="activity_login_error">Error while signing in\nTry again</string>
    <string name="network_error">Network error\nCheck your network settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_action">Logout</string>
    <string name="user_no_location_text">No location</string>
    <string name="settings_text">Settings</string>
    <string name="update_action">Update</string>
    <string name="network_error_text">Check WiFi settings, and then update</string>
    <string name="follow_button_text">Follow</string>
    <string name="retry_button_text">Retry</string>
    <string name="no_internet_connection_text">No internet connection</string>
    <string name="no_internet_connection_text2">It seems like you don\'t have internet</string>
    <string name="no_internet_connection_description_text">No internet connection</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_action">Settings</string>
</resources>
